# winmux

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT.md  README.md  index.html  package.json  pnpm-lock.yaml  winmux.key.pub
.github/workflows/: ci.yml  release.yml
scripts/: daemon-smoke-test.ps1  prepare-daemon-sidecar.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/cli/: main.rs
src-tauri/src/config/: settings.rs
src-tauri/src/daemon/: mod.rs  protocol.rs  server.rs
src-tauri/src/daemon_client/: mod.rs
src-tauri/src/ipc/: mod.rs  protocol.rs  server.rs
src-tauri/src/notification/: mod.rs  osc.rs  store.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src-tauri/src/session/: mod.rs  persistence.rs
src/components/Browser/: BrowserView.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Daemon/: DaemonBanner.tsx
src/components/Notification/: NotificationPanel.tsx
src/components/Sidebar/: ColorPicker.tsx  Sidebar.tsx  WorkspacePresets.tsx  WorkspaceTab.tsx
src/components/SplitPane/: SplitContainer.tsx
src/components/Terminal/: TerminalView.tsx
src/components/TitleBar/: CloseConfirmModal.tsx  TitleBar.tsx
src/components/Updater/: UpdateBanner.tsx
src/lib/: ipc.ts  theme.ts
src/stores/: settingsStore.ts  workspaceStore.ts
src/types/: index.ts
