[package]
name = "winmux"
version = "0.1.0"
edition = "2021"
description = "Terminal multiplexer for Windows, built for AI coding agents"
license = "AGPL-3.0-or-later"
authors = ["Harjot Singh Rana"]
repository = "https://github.com/harjjotsinghh/winmux"
default-run = "winmux"

[lib]
name = "winmux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "winmux"
path = "src/main.rs"

[[bin]]
name = "winmux-cli"
path = "src/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
